--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div>
-                <h3 class="guest">GUEST</h3>
+                <h3 class="guest">AWAY</h3>
                 <div class="backgroundg">
                     <h1 id="scoreg">0</h1>
                 </div>
